fix: openapi spec response for phone codes
