# src/Country/Controller/Api/V1/CountryController.php
@@ -18,6 +18,7 @@ use App\Country\Action\GetPhoneCodes\GetPhoneCodesActionRequest;
 use App\Country\Action\Update\UpdateCountryActionInterface;
 use App\Country\Action\Update\UpdateCountryActionRequest;
 use App\Country\Controller\Response\CountryResponse;
+use App\Country\Controller\Response\PhoneCodeResponse;
 use JsonException;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
@@ -147,7 +148,7 @@ class CountryController extends ApiController
         description: 'List of phone codes.',
         content: new OA\JsonContent(
             type: 'array',
-            items: new OA\Items(ref: new Model(type: CountryResponse::class))
+            items: new OA\Items(ref: new Model(type: PhoneCodeResponse::class))
         )
     )]
     public function getPhoneCodes(Request $request, GetPhoneCodesActionInterface $action): JsonResponse
